cmake_minimum_required(VERSION 3.28)
project(L2_2_)

set(CMAKE_CXX_STANDARD 17)

add_executable(L2_2_ main.cpp
        money.h
        money.cpp
        tests.cpp
        tests.h
        tests.h
        vectordinamic.h
        collection.h
        tranzactie.h
        atm.cpp
        atm.h
        ui.cpp
        ui.h
)
